kubernetes/nuxt/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt
  labels:
    app: nuxt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nuxt
  template:
    metadata:
      labels:
        app: nuxt
    spec:
      containers:
      - name: nuxt
        image: rg.fr-par.scw.cloud/kevinmarrec/nuxt:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nuxt
  labels:
    app: nuxt
spec:
  selector:
    app: nuxt
  ports:
  - port: 3000
